--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-# requirements.txt
-# tracemalloc>=4.0.0
-pympler>=0.9
-objgraph>=3.5.0
-psutil>=5.9.0
-pandas>=1.5.0
-numpy>=1.23.0
-scikit-learn>=1.0.2
-dash>=2.7.0
-plotly>=5.13.0
-matplotlib>=3.6.0
-networkx>=2.8.8
-pytest>=7.2.0
+# Core Python libraries
+matplotlib==3.7.1
+numpy==1.24.3
+tkinter  # Comes with Python standard library
+
+# Development and testing
+pytest==7.3.1
+mypy==1.3.0
+
+# Optional: for type checking and linting
+flake8==6.0.0
+black==23.3.0
